[gd_scene load_steps=11 format=2]

[ext_resource path="res://main/game/game.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/main.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/main-font-64.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/buttons/gear.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/right.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/main-font-32.tres" type="DynamicFont" id=6]
[ext_resource path="res://main/game_over_screen.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Game:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleScreen/root:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TitleScreen/root:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TitleScreen:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameOverScreen:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5000, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "game_over"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Game:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverScreen:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Game:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleScreen/root:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Game:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TitleScreen/root:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TitleScreen:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5000, 0 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="TitleScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="root" type="Control" parent="TitleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="TitleScreen/root"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.5
margin_top = 150.0
margin_right = 167.5
margin_bottom = 78.0
custom_fonts/font = ExtResource( 3 )
text = "Reflection"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="center_hbox" type="HBoxContainer" parent="TitleScreen/root"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -50.0
margin_right = 125.0
margin_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="TitleScreen/root/center_hbox"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_right = 100.0
margin_bottom = 100.0
disabled = true
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="TextureButton" parent="TitleScreen/root/center_hbox"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="bottom_hbox" type="HBoxContainer" parent="TitleScreen/root"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -630.0
margin_top = -39.0
margin_right = 630.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creator" type="Label" parent="TitleScreen/root/bottom_hbox"]
margin_right = 309.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "made by doctorphi"

[node name="empty" type="HBoxContainer" parent="TitleScreen/root/bottom_hbox"]
margin_left = 313.0
margin_right = 1180.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="version" type="Label" parent="TitleScreen/root/bottom_hbox"]
margin_left = 1184.0
margin_right = 1260.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "v1.1"

[node name="GameOverScreen" type="CanvasLayer" parent="."]
offset = Vector2( 5000, 0 )
transform = Transform2D( 1, 0, 0, 1, 5000, 0 )
script = ExtResource( 7 )

[node name="root" type="Control" parent="GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Label" parent="GameOverScreen/root"]
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="scores" type="Label" parent="GameOverScreen/root"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -79.5
margin_right = 319.0
margin_bottom = 79.5
custom_fonts/font = ExtResource( 6 )
text = "Current Score: 500
Best Score: 1000"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="GameOverScreen/root"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = 100.0
margin_right = 95.0
margin_bottom = 22.5
custom_fonts/font = ExtResource( 6 )
text = "Play Again"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Game" parent="." instance=ExtResource( 1 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="GameStart" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )
anims/game_over = SubResource( 2 )
anims/start = SubResource( 3 )
[connection signal="pressed" from="TitleScreen/root/center_hbox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="GameOverScreen/root/PlayAgain" to="GameOverScreen" method="_on_PlayAgain_pressed"]
[connection signal="game_over" from="Game" to="." method="_on_Game_game_over"]
[connection signal="game_results" from="Game" to="GameOverScreen" method="_on_Game_game_results"]
[connection signal="timeout" from="GameStart" to="." method="_on_GameStart_timeout"]
